# blz

./: .actrc  .coderabbit.yaml  .editorconfig  .gitattributes  .github-issue-draft.md  .gitignore  .markdownlint-cli2.jsonc  .mcp.json  .prettierignore  .prettierrc.json  .release-please-canary.json  .release-please-config.json  .release-please-manifest.json  .yamlfmt.yml  .yamllint.yml  AGENTS.md  BRANDING.md  CHANGELOG.md  CI_OPTIMIZATION_REPORT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPS.md  LICENSE  Makefile  PERFORMANCE.md  README.md  REGISTRY_LOOKUP.md  REMOVE_FLAVOR.md  SCRATCHPAD.md  SECURITY.md  SHORT_FLAG_AUDIT.md  cliff.toml  clippy.toml  commitlint.toml  conductor.json  deny.toml  github-issue-rust-agent-reliability.md  hydrate-dev.sh  install-dev.sh  (+14 more)
.agent/: PRD.md
.agents/: CLAUDE.md  README.md
.cargo/: config.toml
.changeset/: initial-release.md
.claude/: settings.json  settings.local.json  sitrep.json
.claude-plugin/: .mcp.json  README.md  plugin.json
.codex/: config.toml
.config/: nextest.toml
.factory/: MCP_SETUP.md  README.md
.github/: labeler.yml  labels.yml  release-drafter.yml
crates/: AGENTS.md  CLAUDE.md
crates/blz-cli/: AGENTS.md  CLAUDE.md  Cargo.toml  REFACTORING_SUMMARY.md  agent-instructions.txt  build.rs
crates/blz-cli/bundled-docs/: llms-full.txt
crates/blz-cli/docs/: OUTPUT-FORMATS.md
crates/blz-cli/src/: cli.rs  error.rs  lib.rs  main.rs  prompt.rs
crates/blz-cli/src/args/: context.rs  mod.rs  output.rs  pagination.rs  show.rs  verbosity.rs
crates/blz-cli/src/commands/: add.rs  alias.rs  anchors.rs  check.rs  claude_plugin.rs  clear.rs  completions.rs  config.rs  create_source.rs  diff.rs  docs.rs  docs_bundle.rs  doctor.rs  find.rs  get.rs  history.rs  info.rs  list.rs  lookup.rs  map.rs  mcp.rs  mod.rs  plugin.rs  query.rs  refresh.rs  remove.rs  rm.rs  search.rs  stats.rs  sync.rs  toc.rs  update.rs  upgrade.rs  validate.rs
crates/blz-cli/src/commands/get/: json_contract.rs
crates/blz-cli/src/commands/sync/: generated.rs  mod.rs
crates/blz-cli/src/config/: content.rs  display.rs  mod.rs  query.rs  resolved.rs  search.rs  snippet.rs  sync.rs  toc.rs
crates/blz-cli/src/generate/: mod.rs  orchestrator.rs
crates/blz-cli/src/output/: detect.rs  formatter.rs  json.rs  mod.rs  progress.rs  render.rs  shapes.rs  stream.rs  text.rs
crates/blz-cli/src/prompt/: alias.rs  mod.rs
crates/blz-cli/src/prompts/: add.prompt.json  alias.prompt.json  blz.prompt.json  clear.prompt.json  completions.prompt.json  diff.prompt.json  docs.prompt.json  doctor.prompt.json  find.prompt.json  get.prompt.json  history.prompt.json  info.prompt.json  list.prompt.json  lookup.prompt.json  refresh.prompt.json  registry.prompt.json  remove.prompt.json  search.prompt.json  stats.prompt.json  toc.prompt.json  update.prompt.json  validate.prompt.json
crates/blz-cli/src/utils/: cli_args.rs  clipboard.rs  constants.rs  filter_flags.rs  flavor.rs  formatting.rs  heading_filter.rs  history.rs  history_log.rs  http.rs  json_builder.rs  logging.rs  mod.rs  parsing.rs  preferences.rs  process_guard.rs  profiling.rs  resolver.rs  settings.rs  staleness.rs  store.rs  test_support.rs  toc.rs  url_resolver.rs  validation.rs
crates/blz-cli/tests/: add_multi_flavor.rs  alias_add_rm.rs  alias_resolver_update_remove.rs  anchor_get.rs  anchors_e2e.rs  batch_get.rs  config_command.rs  flag_ordering.rs  force_prefer_full.rs  format_alias.rs  get_block.rs  get_context_all_single_line.rs  history.rs  info_headings.rs  instruct_smoke.rs  integration_find.rs  language_filter.rs  list_flavor_resolution.rs  list_status_json.rs  pipe_detection.rs  preflight_more.rs  preflight_negative.rs  score_display.rs  search_context_block.rs  search_flavor.rs  search_json.rs  search_next_flag.rs  search_pagination.rs  search_phrase.rs  search_previous_flag.rs  shorthand_context_flags.rs  source_searchability.rs  toc_enhanced.rs  toc_pagination.rs
crates/blz-cli/tests/common/: mod.rs
crates/blz-core/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/blz-core/benches/: performance_optimizations.rs  registry_search_performance.rs  search_performance.rs
crates/blz-core/proptest-regressions/: parser.txt
crates/blz-core/src/: async_io.rs  cache.rs  config.rs  error.rs  fetcher.rs  heading.rs  health.rs  index.rs  integration_example.rs  json_builder.rs  language_filter.rs  lib.rs  mapping.rs  memory_pool.rs  numeric.rs  optimized_index.rs  parser.rs  profile.rs  profiling.rs  refresh.rs  registry.rs  storage.rs  string_pool.rs  types.rs  url_resolver.rs  utils.rs
crates/blz-core/src/discovery/: alias.rs  extract.rs  filter.rs  mod.rs  probe.rs  sitemap.rs
crates/blz-core/src/firecrawl/: detect.rs  mod.rs  scrape.rs
crates/blz-core/src/generate/: assembler.rs  manifest.rs  mod.rs
crates/blz-core/src/page_cache/: mod.rs  storage.rs  types.rs
crates/blz-core/tests/: integration_flavor_detection.rs  ui.rs
crates/blz-core/tests/compile-fail/: invalid_api.rs  invalid_api.stderr
crates/blz-mcp/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/blz-mcp/data/: learn_blz.json
crates/blz-mcp/src/: cache.rs  error.rs  lib.rs  main.rs  server.rs  types.rs
crates/blz-mcp/src/prompts/: discover.rs  mod.rs
crates/blz-mcp/src/resources/: mod.rs  registry.rs  sources.rs
crates/blz-mcp/src/tools/: blz.rs  find.rs  learn_blz.rs  mod.rs  run_command.rs  sources.rs
crates/blz-registry-build/: Cargo.toml
crates/blz-registry-build/src/: main.rs
crates/blz-release/: Cargo.toml
crates/blz-release/src/: main.rs
crates/blzr-cli/: Cargo.toml  build.rs
crates/blzr-cli/src/: main.rs
crates/blzr-mcp/: Cargo.toml
crates/blzr-mcp/src/: main.rs
crates/cache-cli/: Cargo.toml  build.rs
crates/cache-cli/src/: main.rs
docs/: CLAUDE.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART.md  README.md  act-integration.md  architecture.md  cli.md  dx-improvements-v0.6.md  getting-started.md  homebrew.md  mcp.md  rust-patterns.md  search.md  shell-integration.md  sources.md  storage.md  v0.1-release-checklist.md  why-blz.md  zsh-setup.md
npm/: blz  postinstall.js  (+1 more)
(+446 files in other folders)
