[workspace]
resolver = "2"
members = [
    "crates/blz-core",
    "crates/blz-cli",
    "crates/blz-mcp",
    "crates/blz-registry-build",
]

[workspace.package]
version = "1.5.0"
edition = "2024"
authors = ["Outfitter Dev"]
license = "MIT"
repository = "https://github.com/outfitter-dev/blz"
rust-version = "1.85.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false }
sha2 = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
futures = "0.3"
semver = "1"
time = "0.3"

# Profiling
pprof = "0.15"

# Parsing & indexing
tree-sitter = "0.26"
tree-sitter-md = "0.3"
tantivy = "0.22"
fuzzy-matcher = "0.3"


# Performance & profiling
criterion = { version = "0.7", features = ["async_tokio"] }
sysinfo = "0.32"
tempfile = "3"
url = "2"
once_cell = "1"

# CLI utilities
is-terminal = "0.4"
fs2 = "0.4"
inquire = "0.9"

# Internal crates (ensure version is set for crates.io publish of dependents)
blz-core = { path = "crates/blz-core", version = "1.5.0" }
blz-mcp = { path = "crates/blz-mcp", version = "1.5.0" }

[patch.crates-io]
# Work around macOS ARM CPU feature detection panic in ring 0.17.14
# TODO(@galligan): drop this override once a crates.io release includes commit
# 1bb94b3b86380e398d2bc4cf61be7081ff4731a8 (tracked in release checklist).
ring = { git = "https://github.com/briansmith/ring", rev = "1bb94b3b86380e398d2bc4cf61be7081ff4731a8" }
rmcp = { path = "vendor/rmcp" }



[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
# Set group priorities correctly - specific lints override groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some pedantic lints with higher priority
module_name_repetitions = "allow"
must_use_candidate = "allow" 
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# Warn on dangerous patterns in production code
# Note: These are allowed in test code via #[cfg_attr(test, allow(...))]
unwrap_used = "warn"
expect_used = "warn" 
panic = "warn"
unimplemented = "warn"
todo = { level = "warn", priority = 1 }

[profile.dev]
# Shared defaults for contributors; host-specific overrides live in `.cargo/config.toml`.
# Enables incremental builds for fast rebuilds while matching the per-host config.
incremental = true

[profile.dev.package."*"]
# Keep dependencies reasonably optimized without slowing down compile times.
opt-level = 2

[profile.test]
# Align test builds with dev performance expectations.
opt-level = 1
incremental = true

[profile.release]
# Primary release tuning for the workspace; `.cargo/config.toml` handles host-specific tweaks like rustflags/jobs.
lto = true
codegen-units = 1
opt-level = "z"
strip = true
