[package]
name = "blz-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[lints]
workspace = true

[features]
flamegraph = ["dep:pprof", "blz-core/flamegraph"]

[[bin]]
name = "blz"
path = "src/main.rs"

[dependencies]
blz-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
futures.workspace = true

# CLI-specific
colored = "2"
indicatif = "0.17"
clap_complete = "4"
dialoguer = "0.11"

# Performance & profiling (optional; enabled via feature "flamegraph")
pprof = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
