[package]
name = "blz-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"
description = "CLI for blz – fast local llms.txt search"

[lints]
workspace = true

[features]
flamegraph = ["dep:pprof", "blz-core/flamegraph"]
anchors = []

[[bin]]
name = "blz"
path = "src/main.rs"

[dependencies]
blz-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
futures.workspace = true
url.workspace = true
toml_edit.workspace = true
toml.workspace = true

# CLI-specific
colored = "2"
indicatif = "0.17"
clap_complete = "4"
dialoguer = "0.11"
terminal_size = "0.3"
unicode-width = "0.1"
directories = { workspace = true }
serde.workspace = true
sysinfo.workspace = true
is-terminal = { workspace = true }
fs2 = { workspace = true }
base64 = "0.22"
sha2.workspace = true

# Performance & profiling (optional; enabled via feature "flamegraph")
pprof = { workspace = true, features = ["flamegraph", "protobuf-codec"], optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
regex = "1.11"
