[package]
name = "blz-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
flamegraph = ["pprof/flamegraph"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
sha2.workspace = true
base64.workspace = true
tracing.workspace = true
chrono.workspace = true
directories.workspace = true

# Parsing & indexing
tree-sitter.workspace = true
tree-sitter-md.workspace = true
tantivy.workspace = true
fuzzy-matcher.workspace = true
thiserror = "2"
url = "2"
tempfile = "3"
futures = "0.3"

# Performance & profiling
pprof.workspace = true
sysinfo.workspace = true

[dev-dependencies]
proptest = "1"
trybuild = "1"
criterion.workspace = true
tempfile.workspace = true
wiremock = "0.6"

[[bench]]
name = "search_performance"
harness = false

# [[bench]]
# name = "performance_optimizations"
# harness = false
# Note: Disabled until cache/memory_pool modules are implemented
