[package]
name = "blz-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for fast local llms.txt search"

[lints]
workspace = true

[features]
flamegraph = ["dep:pprof", "pprof/flamegraph"]
experimental_benches = []

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
sha2.workspace = true
base64.workspace = true
tracing.workspace = true
chrono.workspace = true
directories.workspace = true

# Parsing & indexing
tree-sitter.workspace = true
tree-sitter-md.workspace = true
tantivy.workspace = true
fuzzy-matcher.workspace = true
thiserror = "2"
url = "2"
tempfile = "3"
futures = "0.3"

# Performance & profiling
pprof = { workspace = true, features = ["flamegraph", "protobuf-codec"], optional = true }
sysinfo.workspace = true

[target.'cfg(windows)'.dependencies.reqwest]
workspace = true
features = [
    "json",
    "gzip",
    "brotli",
    "stream",
    "http2",
    "native-tls",
]

[target.'cfg(not(windows))'.dependencies.reqwest]
workspace = true
features = [
    "json",
    "gzip",
    "brotli",
    "stream",
    "http2",
    "rustls-tls-native-roots",
]

[dev-dependencies]
proptest = "1"
trybuild = "1"
criterion.workspace = true
tempfile.workspace = true
wiremock = "0.6"

[[bench]]
name = "search_performance"
harness = false

# [[bench]]
# name = "performance_optimizations"
# harness = false
# Note: Disabled until cache/memory_pool modules are implemented
