[package]
name = "blz-registry-build"
version.workspace = true
edition.workspace = true

[[bin]]
name = "blz-registry-build"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }