[package]
name = "blz-release"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml_edit = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = "3"
