[package]
name = "blz-release"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml_edit = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
