[package]
name = "blzr-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[features]
flamegraph = ["blzr-core/flamegraph"]

[[bin]]
name = "blz"
path = "src/main.rs"

[dependencies]
blzr-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
chrono.workspace = true

# CLI-specific
colored = "2"
indicatif = "0.17"
clap_complete = "4"
dialoguer = "0.11"
fuzzy-matcher.workspace = true

# Performance & profiling
pprof.workspace = true
sysinfo.workspace = true

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"