[package]
name = "cache-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cache"
path = "src/main.rs"

[dependencies]
cache-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
chrono.workspace = true

# CLI-specific
colored = "2"
indicatif = "0.17"