[package]
name = "cache-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[features]
flamegraph = ["cache-core/flamegraph"]

[[bin]]
name = "cache"
path = "src/main.rs"

[dependencies]
cache-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
chrono.workspace = true

# CLI-specific
colored = "2"
indicatif = "0.17"
clap_complete = "4"

# Performance & profiling
pprof.workspace = true
sysinfo.workspace = true

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"